code/force-app/main/default/objects/TMU_Transaction_Limit__c/TMU_Transaction_Limit__c.object-meta.xml
<CustomObject>
    <label>金融交易額度</label>
    <nameField>
        <label>額度種類</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>