code/force-app/main/default/objects/TMU_Transaction_Limit__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>客戶</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>金融交易額度</relationshipLabel>
    <relationshipName>TMU_Transaction_Limit</relationshipName>
    <type>Lookup</type>
</CustomField>