code/force-app/main/default/objects/TMU_Transaction_Limit__c/fields/Facility_Amount__c.field-meta.xml
<CustomField>
    <fullName>Facility_Amount__c</fullName>
    <label>額度金額</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>