code/force-app/main/default/objects/TMU_Transaction_Limit__c/fields/Facility_Balance__c.field-meta.xml
<CustomField>
    <fullName>Facility_Balance__c</fullName>
    <label>剩餘可用額度</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>