code/force-app/main/default/objects/TMU_Transaction_Limit__c/fields/Facility_Term__c.field-meta.xml
<CustomField>
    <fullName>Facility_Term__c</fullName>
    <label>額度期限</label>
    <type>Date</type>
</CustomField>