code/force-app/main/default/objects/TMU_Transaction_Limit__c/fields/TMU_Transaction_Limit_External_Id__c.field-meta.xml
<CustomField>
    <fullName>TMU_Transaction_Limit_External_Id__c</fullName>
    <externalId>true</externalId>
    <label>金融交易額度外鍵</label>
    <length>200</length>
    <type>Text</type>
</CustomField>