code/force-app/main/default/objects/TMU_Transaction_Limit__c/fields/Utilized_Facility__c.field-meta.xml
<CustomField>
    <fullName>Utilized_Facility__c</fullName>
    <label>使用額度</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>