code/force-app/main/default/objects/TMU_Transaction_Limit__c/fields/Utilized_Facility_Rate__c.field-meta.xml
<CustomField>
    <fullName>Utilized_Facility_Rate__c</fullName>
    <label>額度使用率</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>