code/force-app/main/default/objects/TMU_Transaction_Limit__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Facility_Term__c</columns>
    <columns>Facility_Amount__c</columns>
    <columns>Utilized_Facility__c</columns>
    <columns>Facility_Balance__c</columns>
    <columns>Utilized_Facility_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>